feat: 설정 및 코드 리팩토링, Kafka 초기화 추가
- Docker Compose: Kafka 초기화 컨테이너(kafka-init) 및 healthcheck 추가
- 설정 파일 업데이트: PostgreSQL 및 Hibernate configuration 변경
- HikariCP 설정 추가: connection-timeout, maximum-pool-size 등
- Hibernate 관련 설정 최적화: SQL 포맷팅, LOB 생성 옵션 수정
- Vector 차원 변경: Product 엔티티 description_vector를 768차원 → 384차원으로 업데이트 및 관련 스키마 수정
- ProductOption 엔티티 수정: unique constraints 및 기본값 설정 추가
- indexing 및 초기화 SQL 개선: PL/pgSQL 작성 오류 수정 (DO $ → DO $$)
- Gradle 의존성 관리 정리 및 QueryDSL 관련 설정
- MapStruct, Lombok, 등 처리 순서 명시적 관리
- Docker Compose 서비스 restart 조건 수정: 안정성을 위한 unless-stopped 추가